@@ -6,6 +6,9 @@
    - markus@cvs.openbsd.org 2001/10/04 15:05:40
      [channels.c serverloop.c]
      comment out bogus conditions for selecting on connection_in
+   - markus@cvs.openbsd.org 2001/10/04 15:12:37
+     [serverloop.c]
+     client_alive_check cleanup
 
 20011007
  - (bal) ssh-copy-id corrected permissions for .ssh/ and authorized_keys.
@@ -6651,4 +6654,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1586 2001/10/10 05:01:16 djm Exp $
+$Id: ChangeLog,v 1.1587 2001/10/10 05:01:40 djm Exp $
